--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         class="pwa-header__logo"
       />
       <h1 class="pwa-header__title">
-        Ejemplon de
+        Ejemplo de
         <strong>PWA</strong>
       </h1>
     </div>
